<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.markzhai.lyrichere.ui.DownloadFragment">

    <EditText
        android:id="@+id/field_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meta_title" />

    <EditText
        android:id="@+id/field_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/field_title"
        android:hint="@string/meta_artist" />

    <EditText
        android:id="@+id/field_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/field_artist"
        android:hint="@string/meta_album" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/field_album"
        android:text="@string/submit" />
    <Button
        android:id="@+id/clear_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/field_album"
        android:layout_toLeftOf="@id/submit_button"
        android:text="@string/clear" />

    <ListView
        android:id="@+id/download_search_result"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_below="@id/submit_button"></ListView>

</RelativeLayout>
