<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/playback_controls_padding">

    <ImageView
        android:id="@+id/album_art"
        android:layout_width="@dimen/playback_controls_albumart_size"
        android:layout_height="@dimen/playback_controls_albumart_size"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/currently_playing_song"
        android:scaleType="centerCrop"
        tools:src="@drawable/ic_launcher"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/playback_controls_albumart_horizontal_margin"
        android:layout_toEndOf="@id/album_art"
        android:layout_toStartOf="@+id/play_pause"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currently_playing_song"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"
            tools:text="The Best Music EVAH1111 THE BEST"/>

        <TextView
            android:id="@+id/artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currently_playing_artist"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="John Doe and Band"/>

        <TextView
            android:id="@+id/extra_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currently_playing_extra_info"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone"
            tools:text="casting to MyCast"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/play_pause"
        android:padding="8dp"
        android:src="@drawable/ic_play_arrow_black_36dp"
        android:tint="@color/bt_accent"
        android:tintMode="src_in"/>
</RelativeLayout>
